website/versioned_docs/version-0.63/index-api-windows.md
---
id: version-0.63-Native-API-Reference
title: namespace Microsoft.ReactNative
original_id: Native-API-Reference
sidebar_label: Full reference
---

## Enums
- [`AccessibilityRoles`](AccessibilityRoles)
- [`AccessibilityStates`](AccessibilityStates)
- [`AccessibilityValue`](AccessibilityValue)
- [`CanvasComposite`](CanvasComposite)
- [`CanvasEdgeBehavior`](CanvasEdgeBehavior)
- [`EffectBorderMode`](EffectBorderMode)
- [`EffectOptimization`](EffectOptimization)
- [`JSIEngine`](JSIEngine)
- [`JSValueType`](JSValueType)
- [`MethodReturnType`](MethodReturnType)
- [`RedBoxErrorType`](RedBoxErrorType)
- [`ViewManagerPropertyType`](ViewManagerPropertyType)
## Interfaces
- [`IJSValueReader`](IJSValueReader)
- [`IJSValueWriter`](IJSValueWriter)
- [`IReactContext`](IReactContext)
- [`IReactDispatcher`](IReactDispatcher)
- [`IReactModuleBuilder`](IReactModuleBuilder)
- [`IReactNonAbiValue`](IReactNonAbiValue)
- [`IReactNotificationArgs`](IReactNotificationArgs)
- [`IReactNotificationService`](IReactNotificationService)
- [`IReactNotificationSubscription`](IReactNotificationSubscription)
- [`IReactPackageBuilder`](IReactPackageBuilder)
- [`IReactPackageBuilderExperimental`](IReactPackageBuilderExperimental)
- [`IReactPackageProvider`](IReactPackageProvider)
- [`IReactPropertyBag`](IReactPropertyBag)
- [`IReactPropertyName`](IReactPropertyName)
- [`IReactPropertyNamespace`](IReactPropertyNamespace)
- [`IRedBoxErrorFrameInfo`](IRedBoxErrorFrameInfo)
- [`IRedBoxErrorInfo`](IRedBoxErrorInfo)
- [`IRedBoxHandler`](IRedBoxHandler)
- [`IViewManager`](IViewManager)
- [`IViewManagerWithChildren`](IViewManagerWithChildren)
- [`IViewManagerWithCommands`](IViewManagerWithCommands)
- [`IViewManagerWithExportedEventTypeConstants`](IViewManagerWithExportedEventTypeConstants)
- [`IViewManagerWithExportedViewConstants`](IViewManagerWithExportedViewConstants)
- [`IViewManagerWithNativeProperties`](IViewManagerWithNativeProperties)
- [`IViewManagerWithReactContext`](IViewManagerWithReactContext)
## Structs
- [`AccessibilityAction`](AccessibilityAction)
## Classes
- [`BorderEffect`](BorderEffect)
- [`ColorSourceEffect`](ColorSourceEffect)
- [`CompositeStepEffect`](CompositeStepEffect)
- [`DynamicAutomationPeer`](DynamicAutomationPeer)
- [`DynamicAutomationProperties`](DynamicAutomationProperties)
- [`DynamicValueProvider`](DynamicValueProvider)
- [`GaussianBlurEffect`](GaussianBlurEffect)
- [`QuirkSettings`](QuirkSettings)
- [`ReactApplication`](ReactApplication)
- [`ReactDispatcherHelper`](ReactDispatcherHelper)
- [`ReactInstanceSettings`](ReactInstanceSettings)
- [`ReactNativeHost`](ReactNativeHost)
- [`ReactNotificationServiceHelper`](ReactNotificationServiceHelper)
- [`ReactPropertyBagHelper`](ReactPropertyBagHelper)
- [`ReactRootView`](ReactRootView)
- [`RedBoxHelper`](RedBoxHelper)
- [`ViewControl`](ViewControl)
- [`ViewPanel`](ViewPanel)
- [`XamlHelper`](XamlHelper)
- [`XamlUIService`](XamlUIService)
## Delegates
- [`AccessibilityActionEventHandler`](AccessibilityActionEventHandler)
- [`AccessibilityInvokeEventHandler`](AccessibilityInvokeEventHandler)
- [`ConstantProviderDelegate`](ConstantProviderDelegate)
- [`InitializerDelegate`](InitializerDelegate)
- [`JSValueArgWriter`](JSValueArgWriter)
- [`MethodDelegate`](MethodDelegate)
- [`MethodResultCallback`](MethodResultCallback)
- [`OnResumeAction`](OnResumeAction)
- [`ReactCreatePropertyValue`](ReactCreatePropertyValue)
- [`ReactDispatcherCallback`](ReactDispatcherCallback)
- [`ReactModuleProvider`](ReactModuleProvider)
- [`ReactNotificationHandler`](ReactNotificationHandler)
- [`ReactViewManagerProvider`](ReactViewManagerProvider)
- [`SyncMethodDelegate`](SyncMethodDelegate)
